<resources>
    <string name="Black_AMOLED">Materialized Theme</string>
    <string name="DarkTheme">Dark Theme</string>
    <string name="Folder_tab_structure">"Folder tab's structure"</string>
    <string name="LightTheme">Light Theme</string>
    <string name="_0_times_before">0 times before</string>
    <string name="a_b_repeat">A-B repeat</string>
    <string name="a_quick_tip_about_queue">Some tips about queue tab</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accent_color">Accent color</string>
    <string name="adapt_from_aa">Adapt color from album art</string>
    <string name="adaptive_color_controls">Adaptive color for controls</string>
    <string name="add_folder">Add folder</string>
    <string name="add_its_songs_to_favorites">Add its songs to favorites</string>
    <string name="add_its_songs_to_playlist">Add its songs to a playlist</string>
    <string name="add_shortcut_in_main_menu">Add shortcut in main menu</string>
    <string name="add_this_folder">Add this folder</string>
    <string name="add_to_a_playlist">Add to a playlist</string>
    <string name="add_to_a_queue">Add to a queue</string>
    <string name="add_to_currently_playing_queue">Add to currently playing queue</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="advance">Advance</string>
    <string name="aks_to_resume">Ask to resume</string>
    <string name="album">Album</string>
    <string name="album_art">Album art</string>
    <string name="album_view_mode">Album view mode</string>
    <string name="allowed_delays_info">"Click here to know allowed delays between two consequent presses of earphone's button"</string>
    <string name="appearance">Appearance</string>
    <string name="arrange_tabs">Arrange tabs</string>
    <string name="audio">Audio</string>
    <string name="auto_close_app_setting">Close app automatically if not playing music</string>
    <string name="auto_close_app_setting_explain">Close the app after specific time if the app is not visible and not playing music</string>
    <string name="background_c">Background:</string>
    <string name="blurred_bg_explain">Shows immersive blurred album art as background in now playing screen</string>
    <string name="blurrend_bg_setting">Blurred background in now playing screen</string>
    <string name="broadcast_aa_explain">So it can be used by 3rd party app and android system lock screen.</string>
    <string name="broadcast_album_art_setting">Broadcast album art</string>
    <string name="close_app">Close app</string>
    <string name="close_selection_process_after_an_option_is_selected">Close selection process after an option is selected</string>
    <string name="cpu_efficient_scroll">CPU-Efficient Scrolling</string>
    <string name="delete_permanently">Delete permanently</string>
    <string name="disclaimer_earphone_actions">"Note: Earphone's button actions may not work on some devices! Click to read the reason."</string>
    <string name="double_press_action">"Earphone button's Double-press action"</string>
    <string name="embedded_lyrics_appearance">Embedded lyrics appearance</string>
    <string name="equalizer">Equalizer</string>
    <string name="equalizer_to_use">Equalizer to use</string>
    <string name="exclude_folder_from_scanning">Exclude folder from scanning</string>
    <string name="exclude_small_duration_files">Exclude small duration files</string>
    <string name="exclude_this_folder_from_scanning">Exclude this folder from scanning</string>
    <string name="expandable_notif">Expandable notification</string>
    <string name="fade_vol_effects_title">Fade volume when play/pause</string>
    <string name="fastforward_on_4_press_explain">"On each earphone's button's press >= 4, you can do Fast-Forward."</string>
    <string name="folder_jpg_settings_explain">Use folder.jpg, AlbumArt.jpg etc from the same folder, if embedded AlbumArt is not found in a Song</string>
    <string name="force_to_rescan">Force to rescan</string>
    <string name="force_to_rescan_settings_explain">Useful when newly added songs are missing in Mplayer</string>
    <string name="grid_view">Grid view</string>
    <string name="handsfree_and_speakers">Handsfree and speakers</string>
    <string name="help_and_info">Help and info</string>
    <string name="homescrenn_widget_settings">HomeScreen widgets appearance</string>
    <string name="in_expanded_notification">In expanded notification…</string>
    <string name="interface_">Interface</string>
    <string name="key_album_display_mode">CF_ADM</string>
    <string name="key_auto_close_app_time">kacat</string>
    <string name="key_disconnect_pause">ppkdp</string>
    <string name="key_earphone_double_press_behavior">k_edpb</string>
    <string name="key_earphone_triple_press_behavior">k_etpb</string>
    <string name="key_equalizer_to_use">etu</string>
    <string name="key_exclude_duration_for_scan">k_exdsecscn</string>
    <string name="key_exclude_folders_for_scan">k_exdirscn</string>
    <string name="key_folder_structure">k_fldstruc</string>
    <string name="key_force_rescan">k_f_rscn</string>
    <string name="key_immersive_bg_now_playing">k_imbgnp</string>
    <string name="key_lockscreen_settings">k_lcksn</string>
    <string name="key_lyrics_settings">k_lycss</string>
    <string name="key_min_playback_req">MINPBR</string>
    <string name="key_previous_button_behaviour">PP_PBTNBH</string>
    <string name="key_refresh_songs_info_now">k_rsin</string>
    <string name="key_widget_settings">k_wids</string>
    <string name="lagfree_scroll_pref_explain">Load album arts only when the list is not scrolling. It reduces the CPU usage and gives smooth scrolling.</string>
    <string name="language">Language</string>
    <string name="lock_screen">Lock screen</string>
    <string name="main_menu">Main menu</string>
    <string name="minimum_duration_consider_playback">Minimum duration for considering a playback</string>
    <string name="minimum_duration_consider_playback_explain">Minimum duration of playback require before a song is considered as played</string>
    <string name="musicolet_lockscreen">Mplayer lock-screen</string>
    <string name="next_song">Next song</string>
    <string name="notif_appear">Notification appearance</string>
    <string name="notif_style_c">Notification Style:</string>
    <string name="notif_warning_title">In some devices, these customizations may not work.<u> Click here</u> to read the reason.</string>
    <string name="pause_when_disconnect">Pause when disconnect</string>
    <string name="pause_when_disconnect_explain">Pause music when headset, speaker or bluetooth is disconnected</string>
    <string name="play">Play</string>
    <string name="play_after_current_song">Play after current song</string>
    <string name="play_speed">Play speed</string>
    <string name="previous_song">Previous song</string>
    <string name="previous_song_behaviour_setting">Previous-song button behaviour</string>
    <string name="previous_song_behaviour_setting_explain">Decides what to do when you click previous song button either from player, notification, lockscreen or headset</string>
    <string name="reload_metadata_settings">Reload metadata tags from storage</string>
    <string name="reload_metadata_settings_explain">It reloads metadata tags from storage, and Updates tags of songs in all Queues and Playlists.</string>
    <string name="rem_pos_indie_songs">Remember last positions of all tracks</string>
    <string name="remove_from_favorites">Remove from favorites</string>
    <string name="remove_from_this_playlist">Remove from this playlist</string>
    <string name="remove_from_this_queue">Remove from this queue</string>
    <string name="remove_playlist">Remove playlist</string>
    <string name="rename_playlist">Rename playlist</string>
    <string name="respect_audio_focus_explain">"Pause playback when other apps request audio focus and during calls. Don't un-check this unless you know what you are doing!"</string>
    <string name="respect_audiofocus_settings">Respect audio focus</string>
    <string name="search">Search</string>
    <string name="set_as_ringtone">Set as ringtone</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="share_screenshot">Share ScreenShot</string>
    <string name="share_song">Share song</string>
    <string name="show_advance_controls">Show advance controls</string>
    <string name="show_embedded_lyrics">Show embedded lyrics</string>
    <string name="show_favorite_button">Show favorite button</string>
    <string name="show_filename_instead_of_title_explain">Instead of showing title of the songs, Show their file-names everywhere</string>
    <string name="shuffle_and_play">Shuffle and play</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="song_library_and_tags">Song library and tags</string>
    <string name="stock_notifi_not_custmzbl">Stock notifications are provided by system thus they are not so customizable.</string>
    <string name="summary_use_remaining_time">Show remaining time instead of current time while playing song</string>
    <string name="swipe_app_to_close_explain">Stop playing music and close the app when the app is swiped and removed from recent apps</string>
    <string name="system_equalizer">System Equalizer</string>
    <string name="theme">Theme</string>
    <string name="triple_press_action">"Earphone button's Triple-press action"</string>
    <string name="use_remaining_time">Show remaining time</string>
    <string name="usefull_for_audiobook">Useful for remembering last position in large tracks such as big songs, podcast, audiobooks etc.</string>
</resources>