<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/interface_">
        <Preference android:title="@string/language" android:key="k_s_lng" />
        <Preference android:title="@string/arrange_tabs" android:key="IA_TABO" />
        <ListPreference android:entries="@array/option_fldstruc" android:title="@string/Folder_tab_structure" android:key="@string/key_folder_structure" android:defaultValue="0" android:entryValues="@array/values_fldstruc" />
        <SwitchPreferenceCompat android:textColor="@color/primary_text_dark" android:title="@string/use_remaining_time" android:key="RCPOS" android:summary="@string/summary_use_remaining_time" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/appearance">
        <Preference android:title="@string/theme" android:key="THMR_BT" />
        <CheckBoxPreference android:textColor="@color/primary_text_dark" android:title="@string/blurrend_bg_setting" android:key="@string/key_immersive_bg_now_playing" android:summary="@string/blurred_bg_explain" android:defaultValue="false" />
        <ListPreference android:entries="@array/option_album_display_mode" android:title="@string/album_view_mode" android:key="@string/key_album_display_mode" android:summary="@string/grid_view" android:defaultValue="2" android:entryValues="@array/value_album_display_mode" />
        <Preference android:title="@string/embedded_lyrics_appearance" android:key="@string/key_lyrics_settings" />
        <Preference android:title="@string/homescrenn_widget_settings" android:key="@string/key_widget_settings" />
        <Preference android:title="@string/notif_appear" android:key="k_ntfa" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/audio">
        <ListPreference android:textColor="@color/primary_text_dark" android:entries="@array/options_equalizer_to_use" android:title="@string/equalizer_to_use" android:key="@string/key_equalizer_to_use" android:summary="@string/system_equalizer" android:defaultValue="0" android:entryValues="@array/value_equalizer_to_use" />
        <Preference android:title="@string/play_speed" android:key="k_f_plyspd" />
        <Preference android:title="@string/fade_vol_effects_title" android:key="k_b_fdi" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/lock_screen">
        <Preference android:title="@string/musicolet_lockscreen" android:key="@string/key_lockscreen_settings" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/handsfree_and_speakers">
        <CheckBoxPreference android:title="@string/pause_when_disconnect" android:key="@string/key_disconnect_pause" android:summary="@string/pause_when_disconnect_explain" android:defaultValue="true" />
        <ListPreference android:entries="@array/options_earphone_button_behaviour" android:title="@string/double_press_action" android:key="@string/key_earphone_double_press_behavior" android:summary="@string/next_song" android:defaultValue="1" android:entryValues="@array/value_earphone_button_behaviour" />
        <ListPreference android:entries="@array/options_earphone_button_behaviour" android:title="@string/triple_press_action" android:key="@string/key_earphone_triple_press_behavior" android:summary="@string/previous_song" android:defaultValue="2" android:entryValues="@array/value_earphone_button_behaviour" />
        <Preference android:key="B_SF4" android:summary="@string/fastforward_on_4_press_explain" />
        <Preference android:key="k_delayInfo" android:summary="@string/allowed_delays_info" />
        <Preference android:key="k_note1" android:summary="@string/disclaimer_earphone_actions" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/song_library_and_tags">
        <Preference android:title="@string/exclude_folder_from_scanning" android:key="@string/key_exclude_folders_for_scan" />
        <Preference android:title="@string/exclude_small_duration_files" android:key="@string/key_exclude_duration_for_scan" />
        <Preference android:icon="@drawable/ic_autorenew_black_24dp" android:title="@string/force_to_rescan" android:key="@string/key_force_rescan" android:summary="@string/force_to_rescan_settings_explain" />
        <CheckBoxPreference android:key="k_b_fldjpg" android:summary="@string/folder_jpg_settings_explain" android:defaultValue="false" />
        <Preference android:title="@string/reload_metadata_settings" android:key="@string/key_refresh_songs_info_now" android:summary="@string/reload_metadata_settings_explain" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/advance">
        <CheckBoxPreference android:key="B_PF_EXOSWP" android:summary="@string/swipe_app_to_close_explain" android:defaultValue="false" />
        <CheckBoxPreference android:key="B_PF_FILNMIOTTL" android:summary="@string/show_filename_instead_of_title_explain" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/cpu_efficient_scroll" android:key="k_b_lgfscr" android:summary="@string/lagfree_scroll_pref_explain" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/respect_audiofocus_settings" android:key="B_R_AF" android:summary="@string/respect_audio_focus_explain" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/broadcast_album_art_setting" android:key="B_SYSLCSBG" android:summary="@string/broadcast_aa_explain" android:defaultValue="true" />
        <Preference android:title="@string/rem_pos_indie_songs" android:key="k_b_rlpis" android:summary="@string/usefull_for_audiobook" />
        <ListPreference android:textColor="@color/primary_text_dark" android:entries="@array/options_min_playback_req" android:title="@string/minimum_duration_consider_playback" android:key="@string/key_min_playback_req" android:summary="@string/minimum_duration_consider_playback_explain" android:defaultValue="30" android:entryValues="@array/value_min_playback_req" />
        <ListPreference android:entries="@array/options_auto_close_app_time" android:title="@string/auto_close_app_setting" android:key="@string/key_auto_close_app_time" android:summary="@string/auto_close_app_setting_explain" android:defaultValue="300000" android:entryValues="@array/value_auto_close_app_time" />
        <ListPreference android:entries="@array/option_previous_button_behaviour" android:title="@string/previous_song_behaviour_setting" android:key="@string/key_previous_button_behaviour" android:summary="@string/previous_song_behaviour_setting_explain" android:defaultValue="0" android:entryValues="@array/value_previous_button_behaviour" />
    </PreferenceCategory>
</PreferenceScreen>