<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" android:fadeScrollbars="false">
        <LinearLayout android:orientation="vertical" android:id="@id/ll_container" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_remove_from_queue" android:visibility="gone" android:text="@string/remove_from_this_queue" android:drawableLeft="@drawable/ic_remove_circle_dark" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_remove_from_playlist" android:visibility="gone" android:text="@string/remove_from_this_playlist" android:drawableLeft="@drawable/ic_remove_circle_dark" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_play_all" android:text="@string/play" android:drawableLeft="@drawable/ic_action_play_light" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_shuffle_all" android:text="@string/shuffle_and_play" android:drawableLeft="@drawable/ic_shuffle_dark" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_play_next_all" android:text="@string/play_after_current_song" android:drawableLeft="@drawable/ic_action_next_dark" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_add_to_current_queue_all" android:text="@string/add_to_currently_playing_queue" android:drawableLeft="@drawable/ic_action_queue_playing_dark" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_add_to_a_queue_all" android:text="@string/add_to_a_queue" android:drawableLeft="@drawable/ic_queue" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_add_to_a_playlist_all" android:text="@string/add_to_a_playlist" android:drawableLeft="@drawable/ic_playlist_add_dark" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_add_to_a_fav_all" android:text="@string/add_to_favorites" android:drawableLeft="@drawable/ic_action_favorite_filled_light" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_remove_from_fav_all" android:text="@string/remove_from_favorites" android:drawableLeft="@drawable/ic_action_favorite_border_light" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_share_all" android:text="@string/share" android:drawableLeft="@drawable/ic_action_share_dark" style="@style/DialogSelectableItemWithSmartIcon" />
            <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_delete_all" android:text="@string/delete_permanently" android:drawableLeft="@drawable/ic_action_delete_dark" style="@style/DialogSelectableItemWithSmartIcon" />
        </LinearLayout>
    </ScrollView>
    <View android:background="?colorDivider" android:layout_width="fill_parent" android:layout_height="0.39999998dip" android:contentDescription="@null" />
    <android.support.v7.widget.AppCompatCheckBox android:id="@id/cb_closeSelectionAfterOption" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/close_selection_process_after_an_option_is_selected" />
</LinearLayout>