<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/notif_style_c" />
    <Spinner android:entries="@array/options_notification_style" android:id="@id/sp_notificationStyle" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:orientation="vertical" android:id="@id/vg_musicoletNotifStyle" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip">
        <TextView android:id="@id/tv_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/background_c" />
        <Spinner android:id="@id/sp_mn_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <CheckBox android:id="@id/cb_mn_adaptiveColorControls" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/adaptive_color_controls" />
        <CheckBox android:id="@id/cb_mn_expandableNotif" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/expandable_notif" />
        <LinearLayout android:orientation="vertical" android:id="@id/vg_expandableNotif" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_expanded_notification" />
            <CheckBox android:id="@id/cb_mn_advanceControls" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/show_advance_controls" />
            <CheckBox android:id="@id/cb_mn_showFavourite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_favorite_button" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/vg_StockNotifStyle" android:padding="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/stock_notifi_not_custmzbl" />
        <CheckBox android:id="@id/cb_st_showFavorite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/show_favorite_button" />
    </LinearLayout>
    <in.krosbits.android.widgets.SmartTextView android:textSize="12.0dip" android:id="@id/tv_notifWarning" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/notif_warning_title" app:textTintIndex="6" />
</LinearLayout>