<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/ll_container" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <in.krosbits.android.widgets.SmartTextView android:id="@id/tv_showLyrics" android:text="@string/show_embedded_lyrics" android:drawableLeft="@drawable/ic_subtitles_black_24dp" style="@style/DialogSelectableItemWithSmartIcon" />
        <in.krosbits.android.widgets.SmartTextView android:id="@id/tv_abRepeat" android:text="@string/a_b_repeat" android:drawableLeft="@drawable/ic_a_b_repeat" style="@style/DialogSelectableItemWithSmartIcon" />
        <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_add_to_a_queue" android:text="@string/add_to_a_queue" android:drawableLeft="@drawable/ic_action_queue_playing_dark" style="@style/DialogSelectableItemWithSmartIcon" />
        <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_add_to_a_playlist" android:text="@string/add_to_a_playlist" android:drawableLeft="@drawable/ic_playlist_add_dark" style="@style/DialogSelectableItemWithSmartIcon" />
        <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_setAsRingtone" android:text="@string/set_as_ringtone" android:drawableLeft="@drawable/ic_notifications_bell" style="@style/DialogSelectableItemWithSmartIcon" />
        <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_share" android:text="@string/share_song" android:drawableLeft="@drawable/ic_action_share_dark" style="@style/DialogSelectableItemWithSmartIcon" />
        <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_delete" android:text="@string/delete_permanently" android:drawableLeft="@drawable/ic_action_delete_dark" style="@style/DialogSelectableItemWithSmartIcon" />
        <in.krosbits.android.widgets.SmartTextView android:tag=" " android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="\#MartDevelopers Inc." app:textTintIndex="6" style="?android:listSeparatorTextViewStyle" />
       <!-- <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_support_developer" android:text="@string/support_developer" android:drawableLeft="@drawable/ic_action_favorite_filled_light" style="@style/DialogSelectableItemWithSmartIcon" />-->
        <in.krosbits.android.widgets.SmartTextView android:id="@id/ll_screen_shot" android:text="@string/share_screenshot" android:drawableLeft="@drawable/ic_camera_dark" style="@style/DialogSelectableItemWithSmartIcon" />
    </LinearLayout>
</ScrollView>